--- a/index.html
+++ b/index.html
@@ -1,13 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <div class="container">
+        <div class="navcontainer">
+            <div class="navigation contentwidth">
+                <div class="header">Header Logo</div>
+                <ul class="navi">
+                    <li>header link one</li>
+                    <li>header link two</li>
+                    <li>header link three</li>
+                </ul>
+            </div>
+            <div class="herocontainer contentwidth">
+                <div class="hero">
+                    <div class="heroheader">This website is awesome</div>
+                    <div class="herotext">This website has some subtext that goes here under the main title. It's a
+                        smaller fonr and the color is lower contrast.</div>
+                    <div class="herobutton"><button>Sign up</button></div>
+                </div>
+                <div class="heroimage">this is a placeholder for an image</div>
+            </div>
+        </div>
+        <div class="randomcontainer">
+            <div class="randominfo contentwidth">
+                <div class="randomtitle">Some random information.</div>
+                <div class="randomitems">
+                    <div class="randomitem">
+                        <div class="item"></div>
+                        <div class="itemtext">this is some subtext under an illustration or image</div>
+                    </div>
+                    <div class="randomitem">
+                        <div class="item"></div>
+                        <div class="itemtext">this is some subtext under an illustration or image</div>
+                    </div>
+                    <div class="randomitem">
+                        <div class="item"></div>
+                        <div class="itemtext">this is some subtext under an illustration or image</div>
+                    </div>
+                    <div class="randomitem">
+                        <div class="item"></div>
+                        <div class="itemtext">this is some subtext under an illustration or image</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="quotecontainer">
+            <div class="quote contentwidth">Quote Section</div>
+        </div>
+        <div class="signupcontainer">
+            <div class="signup contentwidth">Signup Section</div>
+        </div>
+        <div class="footer">Copyright © The Odin Project 2023</div>
+    </div>
 </body>
+
 </html>
