finalized design & css

--- a/index.html
+++ b/index.html
@@ -59,10 +59,21 @@
             </div>
         </div>
         <div class="quotecontainer">
-            <div class="quote contentwidth">Quote Section</div>
+            <div class="quote contentwidth">
+                <div class="quotetext">This is an inspiring qupte, or a testimonial from a customer. Maybe it's just
+                    filling up space, or maybe people will actually read it. Who knows? All I know is that it looks
+                    nice.</div>
+                <div class="quotename">-Thor, God of Thunder</div>
+            </div>
         </div>
         <div class="signupcontainer">
-            <div class="signup contentwidth">Signup Section</div>
+            <div class="signup contentwidth">
+                <div class="signupcontent">
+                    <div class="signupheader">Call to action! It's time!</div>
+                    <div class="signuptext">Sign up for our product by clicking that button right over there!</div>
+                </div>
+                <div class="signupbutton"><button>Sign Up</button></div>
+            </div>
         </div>
         <div class="footer">Copyright © The Odin Project 2023</div>
     </div>
