--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                 </div>
                 <div class="signupbutton"><a href="#"><button>Here we go!</button></a></div>
             </div>
+            <div class="signupteam"><img src="img/letsgo.png"></div>
         </div>
         <div class="footer">
             <div class="copyright">Copyright © The Odin Project 2023</div>
